--- a/Libs/Error/Error.css
+++ b/Libs/Error/Error.css
@@ -1,82 +1,103 @@
 @CHARSET "UTF-8";
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,900);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,600,900);
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body, html {
-	background: #eee;
-	color: #555;
-	font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: #333;
+    color: #fff;
+    font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
 
-.main {
-	margin: auto;
-	width: 900px;
+h2 {
+    color: #777;
+    font-weight: 500;
 }
 
 .container {
-	padding: 100px 0;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
-.left {
-	
-}
-
-.error {
-	
-}
-
-.error .ohmy {
-	font-size: 145px;
-	font-weight: 900;
-}
-
-.error .errstr {
-	font-size: 32px;
-	margin-bottom: 25px;
-	width: 500px;
-}
-
-.error .errcode {
-	font-size: 22px;
-	color: #999;
+.main {
+    margin: auto;
+    width: 900px;
 }
 
 .right {
-	float: right;
-	width: 300px;
+    float: right;
 }
 
-.error-icon {
-	width: 100%;
+    .right div.error-icon {
+        width: 300px;
+        height: 300px;
+        background-color: #333;
+        background-image: url(hazaarlogo.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-blend-mode: luminosity;
+    }
+
+.left {
+    width: 500px;
 }
+
+.error {
+}
+
+    .error .ohmy {
+        font-size: 135px;
+        font-weight: 900;
+        margin-bottom: 50px;
+        color: #fff;
+    }
+
+    .error .errstr {
+        font-size: 32px;
+        font-weight: 500;
+        color: #777;
+    }
+
+    .error .errcode {
+        font-size: 22px;
+        color: #666;
+        border-top: 2px solid #d46a6a;
+    }
 
 .moreinfo {
-	margin-top: 25px;
+    margin-top: 25px;
 }
 
 table {
-	border-collapse: collapse;
-	width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
-table th {
-	text-align: left;
-	border-bottom: 1px solid #ddd;
-	background: #fff;
-}
+    table th {
+        text-align: left;
+        border-bottom: 1px solid #666;
+        background: #444;
+        color: #999;
+        font-weight: 500;
+    }
 
-table th, table td {
-	padding: 5px;
-}
+    table th, table td {
+        padding: 10px;
+    }
 
-table td {
-	font-size: 12px;
-}
+    table tr:nth-child(2n+1) {
+        background: #3a3a3a;
+    }
 
-table tr:hover > td {
-	background-color: #ddd;
-}
+    table tr:hover > td {
+        background-color: #ddd;
+    }
