--- a/libs/Error/Error.css
+++ b/libs/Error/Error.css
@@ -102,3 +102,20 @@ table {
     table tr:hover > td {
         background-color: #ddd;
     }
+
+button {
+    border: 1px solid rgba(255,255,255,0.1);
+    padding: 7px 15px;
+    background: rgba(255,255,255,0.1);
+    color: #fff;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+    button:hover {
+        background-color: rgba(255,255,255,0.2);
+    }
+
+.config td {
+    font-family: Courier New, Courier, monospace;
+}
