--- a/libs/Error/Error.phtml
+++ b/libs/Error/Error.phtml
@@ -24,6 +24,22 @@
             <div class="right">
 
                 <div class="error-icon"></div>
+
+                <?php if(ini_get('display_errors')): ?>
+
+                <h2>Application:</h2>
+
+                <div>
+                    <?=APPLICATION_NAME;?>
+                </div>
+
+                <h2>Environment:</h2>
+
+                <div>
+                    <?=APPLICATION_ENV;?>
+                </div>
+
+                <?php endif; ?>
             </div>
 
             <div class="left">
@@ -86,16 +102,6 @@
 
                 <?php endif; ?>
 
-                <?php if(isset($this->err['context'])): ?>
-
-                <h2>Context:</h2>
-
-                <div>
-                    <?=$this->err['context'];?>
-                </div>
-
-                <?php endif; ?>
-
                 <h2>Backtrace:</h2>
 
                 <div class="debug_trace">
@@ -146,22 +152,32 @@
 
                 </div>
 
-            </div>
+                <div>
+                    <h2>Configuration</h2>
+                    <table id="divConfig" class="config">
+                        <thead>
+                            <tr>
+                                <th>Key</th>
+                                <th>Value</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <?php
+                      $config = $this->application->config->toDotNotation();
+                      foreach($config as $key => $value)
+                          echo $this->html->tr(array($this->html->td($key), $this->html->td($value)));
+                            ?>
+                        </tbody>
+                    </table>
+                </div>
 
-            <?php endif; ?>
+                <?php endif; ?>
+
+            </div>
 
         </div>
 
-    </div>
-
-
-    <?=$this->post();?>
-
-
-
-
-
-
+        <?=$this->post();?>
 
 </body>
 
