--- a/libs/Error/Error.css
+++ b/libs/Error/Error.css
@@ -19,7 +19,7 @@ body, html {
 
 h2 {
     color: #777;
-    font-weight: 500;
+    font-weight: lighter;
 }
 
 .container {
@@ -31,11 +31,13 @@ h2 {
 
 .main {
     margin: auto;
-    width: 900px;
+    width: 1100px;
 }
 
 .right {
     float: right;
+    margin-left: 15px;
+    text-align: right;
 }
 
     .right div.error-icon {
@@ -49,7 +51,7 @@ h2 {
     }
 
 .left {
-    width: 500px;
+    width: 600px;
 }
 
 .error {
@@ -100,7 +102,7 @@ table {
     }
 
     table tr:hover > td {
-        background-color: #ddd;
+        background-color: rgba(255,255,255,0.15);
     }
 
 button {
