Added the admin desktop
This is the start of a basic virtual desktop.  It is all run as an "desktop" application, which is a jQuery plugin that manages itself.  Currently it is possible to create a window that can be dragged around the desktop.

--- a/libs/Error/Error.phtml
+++ b/libs/Error/Error.phtml
@@ -11,7 +11,7 @@
         <?=$this->code;?> - <?=$this->status;?>
     </title>
 
-    <?=$this->html->link($this->application->url('hazaar/Error/Error.css'));?>
+    <?=$this->html->link($this->application->url('hazaar/file/error/error.css'));?>
 
 </head>
 
