--- a/libs/admin/desktop.css
+++ b/libs/admin/desktop.css
@@ -20,8 +20,9 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px;
-    background: rgba(0,0,0,0.8);
+    height: 40px;
+    background: #ddd;
+    border-top: 1px solid #ccc;
 }
 
 .window {
@@ -35,4 +36,5 @@
         background: #ddd;
         padding: 5px;
         user-select: none;
+        color: #000;
     }
