--- a/libs/admin/login.phtml
+++ b/libs/admin/login.phtml
@@ -16,17 +16,13 @@
 
     <div class="container">
 
-        <form class="form-signin" action="<?=$this->url('authenticate');?>" method="POST">
+        <form class="form-signin" action="<?=$this->url('login');?>" method="POST">
+            <?php if($this->msg) echo $this->html->div($this->msg)->class('alert alert-danger');?>
             <h2 class="form-signin-heading">Please sign in</h2>
             <label for="inputUser" class="sr-only">User name</label>
             <input type="text" id="inputUser" name="username" class="form-control" placeholder="User name" required autofocus />
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required />
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" value="remember-me" />Remember me
-                </label>
-            </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
 
