--- a/libs/Warlock/controlpanel.phtml
+++ b/libs/Warlock/controlpanel.phtml
@@ -11,11 +11,6 @@
 
     <?=$this->import();?>
 
-    <?=$this->html->link($this->url('hazaar', 'Warlock/controlpanel.css'));?>
-
-    <?=$this->html->script()
-                  ->src($this->url('hazaar', 'Warlock/controlpanel.js'));?>
-
 </head>
 
 <body>
@@ -23,7 +18,6 @@
 <div class="container">
 
     <div class="toolbar">
-
 
         <div class="label">
             <div class="logo"></div>
@@ -48,7 +42,7 @@
 
             <div class="status-label">Status:</div>
 
-            <span class="status" id="status-state"><?=ucwords((string)$this->status['state']);?></span>
+            <span class="status" id="status-state"><?=ucwords((string)ake($this->status, 'state', 'Unknown'));?></span>
 
         </div>
 
@@ -65,14 +59,14 @@
                     <div class="item wide">
                         <div class="item-content">
                             <div class="label">Uptime</div>
-                            <div class="value" id="uptime" data-start="<?=$this->status['started'];?>"></div>
+                            <div class="value" id="uptime" data-start="<?=ake($this->status, 'started');?>"></div>
                         </div>
                     </div>
 
                     <div class="item wide">
                         <div class="item-content">
                             <div class="label">PID</div>
-                            <div class="value" id="status-pid"><?=ucfirst($this->status['pid']);?></div>
+                            <div class="value" id="status-pid"><?=ucfirst(ake($this->status, 'pid'));?></div>
                         </div>
                     </div>
 
@@ -80,7 +74,7 @@
                         <div class="item-content">
                             <div class="label">Memory (MB)</div>
                             <div class="value"
-                                 id="status-memory"><?=str_bytes($this->status['memory'], NULL, NULL, TRUE);?>
+                                 id="status-memory"><?=str_bytes(ake($this->status, 'memory'), NULL, 0, TRUE);?>
                             </div>
 
                         </div>
@@ -89,14 +83,14 @@
                     <div class="item">
                         <div class="item-content">
                             <div class="label">Sockets</div>
-                            <div class="value" id="status-connections"><?=$this->status['connections'];?></div>
+                            <div class="value" id="status-connections"><?=ake($this->status, 'connections');?></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="item-content">
                             <div class="label">Clients</div>
-                            <div class="value" id="status-clients"><?=count($this->status['clients']);?></div>
+                            <div class="value" id="status-clients"><?=count(ake($this->status, 'clients'));?></div>
                         </div>
                     </div>
 
@@ -168,14 +162,14 @@
                         <div class="item-content">
                             <div class="label">Subscriptions</div>
                             <div class="value"
-                                 id="status-subscriptions"><?=$this->status['stats']['subscriptions'];?></div>
+                                 id="status-subscriptions"><?=ake($this->status['stats'], 'subscriptions');?></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="item-content">
                             <div class="label">Events</div>
-                            <div class="value" id="status-events"><?=$this->status['stats']['events'];?></div>
+                            <div class="value" id="status-events"><?=ake($this->status['stats'], 'events');?></div>
                         </div>
                     </div>
 
