--- a/libs/admin/db/schema.phtml
+++ b/libs/admin/db/schema.phtml
@@ -1,5 +1,11 @@
 
 <h1>Database Schema Management</h1>
+<div style="font: 18px 'Courier New'">
+    <div>Current version:</div>
+    <div>
+        <?=$this->current_version;?>
+    </div>
+</div>
 
 <div class="row">
     <div class="col col-md-6">
