Minor style tweaks to db schema migration log output

--- a/libs/admin/db/schema.phtml
+++ b/libs/admin/db/schema.phtml
@@ -24,7 +24,7 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Snapshot Log</div>
-            <div id="snapshotlog" class="panel-body"></div>
+            <div id="snapshotlog" class="panel-body logoutput"></div>
         </div>
     </div>
     <div class="col col-md-6">
@@ -42,7 +42,7 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Migration Log</div>
-            <div id="migratelog" class="panel-body"></div>
+            <div id="migratelog" class="panel-body logoutput"></div>
         </div>
     </div>
 </div>
