--- a/libs/console/app/views.phtml
+++ b/libs/console/app/views.phtml
@@ -1,1 +1,21 @@
+
 <h1>Views</h1>
+
+<?php
+if(is_array($this->views)){
+
+    $table = $this->html->table()->class('table');
+
+    foreach($this->views as $view){
+
+        $row = $this->html->row(array(
+            $view['name'],
+            $view['file']
+        ));
+
+    }
+
+    echo $table;
+
+}
+?>
