--- a/libs/console/layout.css
+++ b/libs/console/layout.css
@@ -23,7 +23,23 @@ body {
  */
 .navbar-fixed-top {
     border: 0;
+    background-color: #554d7c;
 }
+
+.navbar-logo {
+    float: left;
+    margin: 10px 15px 10px 0;
+    height: 40px;
+    width: 40px;
+    background-image: url(images/hazaar-icon-white.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+    .navbar-logo img {
+        display: block;
+        background-color: #fff;
+    }
 
 /*
  * Sidebar
@@ -34,20 +50,18 @@ body {
     display: none;
 }
 
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
+.sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
 }
 
 /* Sidebar navigation */
@@ -78,16 +92,9 @@ body {
     padding: 20px;
 }
 
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
+    .main .page-header {
+        margin-top: 0;
     }
-}
-
-.main .page-header {
-    margin-top: 0;
-}
 
 
 /*
