--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -18,10 +18,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="<?=$this->url();?>">
-                    Hazaar MVC (<?=$this->application->config->app->name;?>)
+                <div class="navbar-logo"></div>
+                <a class="navbar-brand" href="<?=$this->application->url();?>">
+                    <?=ake($this->application->config->app, 'name', 'Application');?>
                 </a>
-                <a class="navbar-brand" href="<?=$this->application->url();?>">Back to site</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -41,9 +41,6 @@
                         <a href="<?=$this->url('help');?>">Help</a>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search..." />
-                </form>
             </div>
         </div>
     </nav>
@@ -61,9 +58,8 @@
 
                     foreach(ake($section, 'items', array()) as $target => $label){
 
-                        $name = ( ( $prefix == 'app' && $target == 'index' ) ? '' : $prefix . '_' . $target );
-
-                        $sidebar->add($this->html->li($this->html->a($this->url($name), $label))->toggleClass('active', $this->active('hazaar', $name)));
+                        $sidebar->add($this->html->li($this->html->a($this->url($target), $label))
+                            ->toggleClass('active', $this->active('hazaar', $target)));
 
                     }
                     echo $sidebar;
