--- a/libs/console/login/main.css
+++ b/libs/console/login/main.css
@@ -94,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-group {
     margin-bottom: 0;
-    border: 1px solid #eee;
+    border: 1px solid #d9d9d9;
     margin-bottom: 35px;
     padding: 15px;
 }
