Reworked the console menu links
Links are now grouped using the group name, but the link target itself uses the module name and action name.  This has fixed the support file references that could not be loaded since updating the menu links.

--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -56,10 +56,10 @@
 
                     $sidebar = $this->html->ul()->class('nav nav-sidebar');
 
-                    foreach(ake($section, 'items', array()) as $target => $item){
+                    foreach(ake($section, 'items', array()) as $item){
 
-                        $sidebar->add($this->html->li($this->html->a($this->url($prefix . '/' . $target), ake($item, 'label')))
-                            ->toggleClass('active', $this->active('hazaar', $target)));
+                        $sidebar->add($this->html->li($this->html->a($this->url(ake($item, 'target')), ake($item, 'label')))
+                            ->toggleClass('active', $this->active('hazaar', ake($item, 'target'))));
 
                     }
                     echo $sidebar;
