--- a/libs/console/layout.css
+++ b/libs/console/layout.css
@@ -4,224 +4,458 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 50px;
+    background: #444;
+    color: #fff;
+    font-family: 'Quicksand', 'Arial Narrow', Arial, sans-serif;
 }
 
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
+.hazaar-layout {
 }
+
+.main-panel .main {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+}
+
+    .main-panel .main .notice {
+        padding: 15px 50px;
+    }
+
+    .main-panel .main .main-content {
+        padding: 15px;
+    }
+
+.row {
+    float: left;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+    .row .col {
+        float: left;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+
+    .row .col-1 {
+        width: 8.3333333%;
+    }
+
+    .row .col-2 {
+        width: 16.666667%;
+    }
+
+    .row .col-3 {
+        width: 25%;
+    }
+
+    .row .col-4 {
+        width: 33.3333333%;
+    }
+
+    .row .col-5 {
+        width: 41.6666667%;
+    }
+
+    .row .col-6 {
+        width: 50%;
+    }
+
+    .row .col-7 {
+        width: 58.3333333%;
+    }
+
+    .row .col-8 {
+        width: 66.6666667%;
+    }
+
+    .row .col-9 {
+        width: 75%;
+    }
+
+    .row .col-10 {
+        width: 83.3333333%;
+    }
+
+    .row .col-11 {
+        width: 91.6666667%;
+    }
+
+    .row .col-12 {
+        width: 100%;
+    }
+
 
 /*
  * Top navigation
  * Hide default border to remove 1px line.
  */
 .navbar-fixed-top {
-    border: 0;
     background-color: #554d7c;
+    padding: 0;
 }
 
-.navbar-logo {
-    float: left;
-    margin: 10px 15px 10px 0;
-    height: 40px;
-    width: 40px;
-    background-image: url(images/hazaar-icon-white.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-    .navbar-logo img {
-        display: block;
-        background-color: #fff;
+    .navbar-fixed-top .container-fluid {
+        padding-left: 0;
     }
+
+    .navbar-fixed-top .navbar-header {
+        background: rgba(0,0,0,0.3);
+        padding: 0 15px;
+    }
+
+
 
 /*
  * Sidebar
  */
-
-/* Hide for mobile, show later */
 .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 250px;
+    z-index: 1000;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #333;
+}
+
+    .sidebar .sidebar-header {
+        background: #2d2d2d;
+        float: left;
+        width: 100%;
+        font-family: 'Julius Sans One', 'Arial Narrow', Arial, sans-serif;
+    }
+
+        .sidebar .sidebar-header .sidebar-logo {
+            float: left;
+            margin: 10px 10px 10px 25px;
+            height: 40px;
+            width: 40px;
+            background-image: url(images/hazaar-icon-white.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        .sidebar .sidebar-header .sidebar-brand {
+            text-decoration: none;
+            color: #fff;
+            display: block;
+            padding: 0 15px;
+            line-height: 60px;
+            text-align: center;
+        }
+
+.sidebar-logo img {
+    display: block;
+    background-color: #fff;
+}
+
+
+/**
+    Sidebar User info
+*/
+.sidebar-user-info {
+    float: left;
+    width: 100%;
+    padding: 30px;
+    color: #fff;
+    font-size: 12px;
+}
+
+    .sidebar-user-info .sidebar-user-img {
+        float: left;
+        border-radius: 50%;
+        width: 48px;
+        height: 48px;
+        margin-right: 16px;
+    }
+
+    .sidebar-user-info .sidebar-user-name {
+        margin-top: 7px;
+    }
+
+    .sidebar-user-info .sidebar-user-role {
+        color: #999;
+    }
+
+/**
+    Sidebar menus
+*/
+.sidebar ul {
+    color: #fff;
+    margin: 0;
+    font-size: 13px;
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar-nav,
+.sidebar-nav-item,
+.sidebar-nav-items,
+.sidebar-nav-module a {
+    float: left;
+    width: 100%;
+    text-decoration: none;
+}
+
+.sidebar-nav-module a {
+    padding: 15px;
+    border-left: 7px solid transparent;
+    font-size: 14px;
+    color: #fff;
+}
+
+    .sidebar-nav-module a:hover {
+        text-decoration: none;
+        background-color: #444;
+        border-left-color: #554d7c;
+    }
+
+    .sidebar-nav-module a i.fa,
+    .sidebar-nav-item .sidebar-nav-items li a i.fa {
+        width: 16px;
+        margin-right: 10px;
+    }
+
+.sidebar-nav-item.selected {
+    background: #4a4a4a;
+}
+
+    .sidebar-nav-item.selected > a {
+        background: #444;
+        border-left-color: #554d7c;
+    }
+
+.sidebar-nav-item .sidebar-nav-items {
     display: none;
 }
 
-.sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
+.sidebar-nav-item.selected .sidebar-nav-items {
     display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
 }
 
-/* Sidebar navigation */
-.nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
+
+.sidebar-nav-item .sidebar-nav-items li a {
+    width: 100%;
+    box-sizing: border-box;
 }
 
-    .nav-sidebar > li > a {
-        padding-right: 20px;
-        padding-left: 20px;
-    }
-
-    .nav-sidebar > .active > a,
-    .nav-sidebar > .active > a:hover,
-    .nav-sidebar > .active > a:focus {
-        color: #fff;
-        background-color: #428bca;
-    }
-
-
-/*
- * Main content
- */
-
-.main {
-    padding: 20px;
-}
-
-    .main .page-header {
-        margin-top: 0;
-    }
-
-
-/*
- * Placeholder dashboard ideas
- */
-
-.placeholders {
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-    .placeholders h4 {
-        margin-bottom: 0;
-    }
-
-.placeholder {
-    margin-bottom: 20px;
-}
-
-    .placeholder img {
-        display: inline-block;
-        border-radius: 50%;
-    }
-
-.log-time {
-    float: left;
-    width: 200px;
-}
-
-.logoutput {
-    font: 12px "Courier New";
-}
-
-.phpinfo {
-    font-weight: lighter;
-}
-
-    .phpinfo pre {
-        margin: 0;
-        font-family: monospace;
-    }
-
-    .phpinfo a:link {
-        color: #009;
-        text-decoration: none;
-        background-color: #fff;
-    }
-
-    .phpinfo a:hover {
-        text-decoration: underline;
-    }
-
-    .phpinfo table {
-        border-collapse: collapse;
-        border: 0;
-        width: 100%;
-    }
-
-    .phpinfo .center {
+    .sidebar-nav-item .sidebar-nav-items li a .suffix {
+        float: right;
+        padding: 0 8px;
+        border-radius: 3px;
+        min-width: 16px;
         text-align: center;
     }
 
-        .phpinfo .center table {
-            margin: 1em auto;
-            text-align: left;
+/**
+    Main Panel
+*/
+.main-panel {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 250px;
+}
+
+    .main-panel .main-topbar {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 60px;
+        background: #554d7c;
+    }
+
+/**
+    Top Navbar
+*/
+.main-topbar {
+    float: left;
+    width: 100%;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+    .main-topbar ul.navbar {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        float: left;
+    }
+
+        .main-topbar ul.navbar.navbar-right {
+            float: right;
         }
 
-            .phpinfo .center table:first-of-type tr.h {
-                background: none;
-                color: #333;
+        .main-topbar ul.navbar.navbar-buttons a {
+            background: rgba(255,255,255,0.1);
+            margin-left: 15px;
+            padding: 10px 15px;
+            border-radius: 3px;
+        }
+
+            .main-topbar ul.navbar.navbar-buttons a:hover {
+                background: rgba(255,255,255,0.2);
             }
 
-                .phpinfo .center table:first-of-type tr.h td {
-                    border: none;
-                }
+    .main-topbar .navbar li {
+        float: left;
+    }
 
-        .phpinfo .center th {
-            text-align: center !important;
+    .main-topbar .navbar a {
+        color: #fff;
+        text-decoration: none;
+        padding: 5px;
+        line-height: 60px;
+    }
+
+    .main-topbar .main-label {
+        font-size: 1.3em;
+        line-height: 60px;
+        float: left;
+        margin-left: 25px;
+    }
+
+/*
+    Notices
+*/
+.notice {
+    background: #777;
+}
+
+    .notice .fa {
+        margin-right: 5px;
+    }
+
+
+/*
+    Panels
+*/
+.panel {
+    background-color: #fff;
+    color: #333;
+    box-shadow: 1px 1px 16px rgba(0,0,0,0.3);
+    float: left;
+    width: 100%;
+}
+
+    .panel .panel-header {
+        padding: 25px 25px 0 25px;
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+
+    .panel .panel-header,
+    .panel .panel-content,
+    .panel .panel-footer {
+        float: left;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .panel > h1, .panel > h2, .panel > h3, .panel > h4 {
+        padding: 15px 15px 0 15px;
+        font-weight: lighter;
+    }
+
+    .panel .panel-content,
+    .panel .panel-footer {
+        padding: 25px;
+    }
+
+    .panel .panel-footer {
+        background-color: rgba(0,0,0,0.1);
+    }
+
+    .panel > .table th,
+    .panel > .table td {
+        padding: 10px 25px;
+    }
+
+        .panel > .table th:first-child,
+        .panel > .table td:first-child {
+            padding-left: 50px;
         }
 
-    .phpinfo td, .phpinfo th {
-        border: 1px solid rgba(221, 221, 221, 0.3);
-        vertical-align: baseline;
-        padding: 8px 7px;
-    }
+        .panel > .table th:last-child,
+        .panel > .table td:first-child {
+            padding-right: 50px;
+        }
 
-    .phpinfo h1 {
-        font-size: 150%;
-        margin: 0;
-    }
-
-    .phpinfo h2 {
-        font-size: 125%;
-    }
-
-    .phpinfo .p {
-        text-align: left;
-    }
-
-    .phpinfo .e {
-        background-color: #ccf;
-        width: 300px;
-    }
-
-    .phpinfo .h {
-        background-color: #554d7c;
+    .panel.default, .panel.primary, .panel.info, .panel.warning, .panel.danger {
         color: #fff;
     }
 
-    .phpinfo .v {
-        background-color: #ddd;
-        max-width: 300px;
-        overflow-x: auto;
+table.table {
+    width: 100%;
+}
+
+    table.table th,
+    table.table td {
+        text-align: left;
+        border-bottom: 1px solid rgba(0,0,0,0.1);
+        padding: 5px 10px;
     }
 
-        .phpinfo .v i {
-            color: #999;
-        }
+/*
+        Buttons
+    */
+button {
+    border: none;
+    padding: 10px 15px;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    opacity: 0.8;
+}
 
-    .phpinfo img {
-        float: right;
-        border: 0;
+    button:hover {
+        opacity: 1;
     }
 
-    .phpinfo hr {
-        width: 934px;
-        background-color: #ccc;
-        border: 0;
-        height: 1px;
+/*
+        Fancy Stat Class
+    */
+.stat {
+    text-align: center;
+}
+
+    .stat .number {
+        font-size: 2em;
     }
+
+    .stat .label {
+        font-weight: lighter;
+        font-size: .8em;
+    }
+/*
+    Shared Background Colors
+*/
+.default {
+    background-color: #777;
+}
+
+.primary {
+    background-color: #2ECBFF;
+}
+
+.info {
+    background-color: #02877a;
+}
+
+.warning {
+    background-color: #ea6710;
+}
+
+.danger {
+    background-color: #be3030;
+}
