--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -6,68 +6,114 @@
 
     <?=$this->import(); ?>
 
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Open+Sans|Quicksand" rel="stylesheet" />
+
 </head>
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-logo"></div>
-                <a class="navbar-brand" href="<?=$this->application->url();?>">
-                    <?=ake($this->application->config->app, 'name', 'Application');?>
+    <?php
+    $module_info = array('label' => 'Module', 'icon' => 'bars');
+    ?>
+
+    <div class="hazaar-layout">
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-logo"></div>
+                <a class="sidebar-brand" href="<?=$this->url();?>">
+                    Hazaar Admin
                 </a>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="<?=$this->url();?>">Dashboard</a>
-                    </li>
-                    <li>
-                        <a href="<?=$this->url('settings');?>">Settings</a>
-                    </li>
-                    <li>
-                        <a href="<?=$this->url('profile');?>">Profile</a>
-                    </li>
-                    <li>
-                        <a href="<?=$this->url('logout');?>">Logout</a>
-                    </li>
-                    <li>
-                        <a href="<?=$this->url('help');?>">Help</a>
-                    </li>
-                </ul>
+            <div class="sidebar-user-info">
+                <?=$this->extra->gravatar('jamie@hazaarlabs.com')->class('sidebar-user-img');?>
+                <div class="sidebar-user-name">Jamie Carl</div>
+                <div class="sidebar-user-role">Administrator</div>
             </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="sidebar-nav">
                 <?php
+                $nav = $this->html->ul()->class('sidebar-nav-module');
 
                 foreach($this->navitems as $prefix => $section){
 
-                    echo $this->html->h3(ake($section, 'label'));
+                    $module_nav = $this->html->li()->class('sidebar-nav-item');
 
-                    $sidebar = $this->html->ul()->class('nav nav-sidebar');
+                    $icon = ake($section, 'icon', 'cube');
 
-                    foreach(ake($section, 'items', array()) as $item){
+                    $module_nav->add($this->html->a($this->url($prefix), array(
+                        $this->fontawesome->icon($icon),
+                        ake($section, 'label'),
+                    )))->toggleClass('selected', $this->active($prefix));
 
-                        $sidebar->add($this->html->li($this->html->a($this->url(ake($item, 'target')), ake($item, 'label')))
-                            ->toggleClass('active', $this->active('hazaar', ake($item, 'target'))));
+                    if($this->active($prefix))
+                        $module_info = array('label' => ake($section, 'label'), 'icon' => $icon);
+
+                    if($items = ake($section, 'items')){
+
+                        $nav_items = $this->html->ul()->class('sidebar-nav-items');
+
+                        foreach($items as $item){
+
+                            $target = ake($item, 'target');
+
+                            $link = $this->html->a($this->url($target), array(
+                                $this->html->i()->class('fa fa-' . ake($item, 'icon', 'none')),
+                                ake($item, 'label')
+                            ));
+
+                            if($suffix = ake($item, 'suffix'))
+                                $link->add($this->html->div(ake($suffix, 0))->class('suffix ' . ake($suffix, 1, 'default')));
+
+                            $nav_items->add($this->html->li($link)
+                                ->toggleClass('active', $this->active('hazaar', $target)));
+
+                        }
+
+                        $module_nav->add($nav_items);
 
                     }
-                    echo $sidebar;
+
+                    $nav->add($module_nav);
+
+                }
+
+                echo $nav;
+
+                ?>
+            </div>
+        </div>
+        <div class="main-panel">
+            <div class="main-topbar">
+                <div class="main-label">
+                    <i class="fa fa-<?=$module_info['icon'];?>"></i>
+                    <?=$module_info['label'];?>
+                </div>
+                <ul class="navbar navbar-right navbar-buttons">
+                    <li>
+                        <a href="<?=$this->url('settings');?>">
+                            <i class="fa fa-cogs"></i>
+                            Settings
+                        </a>
+                    </li>
+                    <li>
+                        <a href="<?=$this->url('logout');?>">
+                            <i class="fa fa-sign-out"></i>
+                            Logout
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="main">
+                <?php
+                if(is_array($this->notices)){
+                    foreach($this->notices as $notice)
+                        echo $this->html->div(array(
+                            $this->html->i()->class('fa fa-' . ake($notice, 'icon', 'bell')),
+                            ake($notice, 'msg')
+                        ))->class(trim('notice ' . ake($notice, 'class')));
 
                 } ?>
-            </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <?=$this->layout();?>
+                <div class="main-content">
+                    <?=$this->layout();?>
+                </div>
             </div>
         </div>
     </div>
