--- a/libs/console/layout.css
+++ b/libs/console/layout.css
@@ -422,6 +422,9 @@ button {
         opacity: 1;
     }
 
+    button.btn-hazaar {
+        width: 100%;
+    }
 /*
         Fancy Stat Class
     */
