Console: Updated gravatar call

--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="sidebar-user-info">
-                <?=$this->extra->gravatar('jamie@hazaarlabs.com')->class('sidebar-user-img');?>
+                <?=$this->gravatar('jamie@hazaarlabs.com')->class('sidebar-user-img');?>
                 <div class="sidebar-user-name">Jamie Carl</div>
                 <div class="sidebar-user-role">Administrator</div>
             </div>
