Console: Started adding config management
refs #12
refs #46

--- a/libs/console/layout.css
+++ b/libs/console/layout.css
@@ -447,6 +447,10 @@ button {
     background-color: #777;
 }
 
+.success {
+    background-color: #48e478;
+}
+
 .primary {
     background-color: #2ECBFF;
 }
