Console: Minor tweak to the config file encyption actions

--- a/libs/console/configs.phtml
+++ b/libs/console/configs.phtml
@@ -9,8 +9,7 @@
                         <tr>
                             <th>Name</th>
                             <th>Size</th>
-                            <th>Encrypted</th>
-                            <th></th>
+                            <th>Encryption</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
