--- a/libs/console/phpinfo.phtml
+++ b/libs/console/phpinfo.phtml
@@ -1,15 +1,22 @@
+<div class="row">
+    <div class="col col-12">
+        <div class="panel">
+            <div class="panel-content">
+                <div class="phpinfo">
+                    <?php
 
-<div class="phpinfo">
-    <?php
+                    ob_start();
 
-    ob_start();
+                    phpinfo();
 
-    phpinfo();
+                    $php_info = ob_get_clean();
 
-    $php_info = ob_get_clean();
+                    if(preg_match('/<body>(.*)<\/body>/ms', $php_info, $matches))
+                        echo $matches[1];
 
-    if(preg_match('/<body>(.*)<\/body>/ms', $php_info, $matches))
-        echo $matches[1];
-
-    ?>
+                    ?>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
