--- a/libs/console/css/login.css
+++ b/libs/console/css/login.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background: #eee url(hazaar-bg.jpg) no-repeat;
+    background: #eee url(../images/hazaar-bg.jpg) no-repeat;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
 }
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .login-icon {
     float: right;
-    background-image: url(hazaar-icon-lg.png);
+    background-image: url(../images/hazaar-icon-lg.png);
     background-repeat: no-repeat;
     background-size: contain;
     width: 64px;
