--- a/libs/error/error.css
+++ b/libs/error/error.css
@@ -1,4 +1,4 @@
-@CHARSET "UTF-8";
+    @CHARSET "UTF-8";
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,600,900);
 
@@ -73,7 +73,7 @@ h2 {
     .error .errcode {
         font-size: 22px;
         color: #666;
-        border-top: 2px solid #d46a6a;
+        border-top: 2px solid #554d7c;
     }
 
 .moreinfo {
