--- a/libs/media/dir.phtml
+++ b/libs/media/dir.phtml
@@ -4,45 +4,63 @@
     <title>Index of <?=$this->path;?></title>
 
     <style>
-        table th, table td { padding: 2px 10px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; padding: 50px; background: #eee; }
+        .index-header { margin-bottom: 15px; }
+        .index-header h1, .index-header h2 { margin: 0; padding: 0; font-weight: lighter; }
+        .index-header h2 { color: #999; font-size: 1em; }
+        .dir { background: rgba(255,255,255,0.6); padding: 50px; color: #999; }
+        .dir table { min-width: 800px; }
+        .dir table th { border-bottom: 1px solid rgba(0,0,0,0.1); text-align: left; }
+        .dir table th, .dir table td { padding: 2px 25px 2px 0; margin: auto; }
     </style>
 </head>
 <body>
 
-    <h1>
-        Index of <?=$this->path;?>
-    </h1>
+    <div class="index-header">
+        <h1>
+            Index of <?=$this->path;?>
+        </h1>
+        <h2>
+            Source: <?=$this->source;?>
+        </h2>
+    </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Last Modified</th>
-                <th>Size</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <?php
+    <div class="dir">
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Last Modified</th>
+                    <th>Size</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <?php
 
-            echo $this->html->tr(array(
-                    $this->html->td($this->html->a($this->url(dirname($this->vpath)), '[parent]')),
-                    $this->html->td(),
-                    $this->html->td('-'),
-                    $this->html->td()
-                ));
+            if($this->root === false){
+
+                echo $this->html->tr(array(
+                        $this->html->td($this->html->a($this->url(dirname($this->vpath)), '[parent]')),
+                        $this->html->td(),
+                        $this->html->td('-'),
+                        $this->html->td()
+                    ));
+
+            }
 
             while($file = $this->dir->read()){
 
                 echo $this->html->tr(array(
                     $this->html->td($this->html->a($this->url($this->vpath . '/' . $file->basename()), $file->basename())),
                     $this->html->td($this->datetime($file->mtime())),
-                    $this->html->td(str_bytes($file->size())),
+                    $this->html->td(((($size = $file->size()) > 0) ? str_bytes($size) : '-')),
                     $this->html->td($file->get_meta('comment'))
                 ));
             }
-            ?>
-        </tbody>
-    </table>
+                ?>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
