--- a/libs/media/dir.phtml
+++ b/libs/media/dir.phtml
@@ -21,7 +21,7 @@
             Index of <?=$this->path;?>
         </h1>
         <h2>
-            Source: <?=$this->source;?>
+            Media source: <?=$this->source;?>
         </h2>
     </div>
 
